# eyerec-python

./: .gitmodules  CMakeLists.txt  pyproject.toml  setup.py
examples/: track-pupil.py
eyerec/: CMakeLists.txt  __init__.py  _eyerec.pyx
